// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should display login link in the document with correct styles 1`] = `
.c0 {
  display: inline-block;
  padding: 1rem 2rem;
  margin-top: 0;
  font-weight: 700;
  color: #446DF6 !important;
  border-left: 1px solid #F0F0FD;
  background: none;
  -webkit-transition: -webkit-transform 0.25s;
  -webkit-transition: transform 0.25s;
  transition: transform 0.25s;
  border: none;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

<a
  class="c0"
  href="/"
  linktype="login"
>
  Login
</a>
`;

exports[`NavLink should display logout link in the document with correct styles 1`] = `
.c0 {
  display: inline-block;
  padding: 1rem 2rem;
  margin-top: 0;
  font-weight: 700;
  color: #DA2442 !important;
  border-left: 1px solid #F0F0FD;
  background: none;
  -webkit-transition: -webkit-transform 0.25s;
  -webkit-transition: transform 0.25s;
  transition: transform 0.25s;
  border: none;
}

.c0:hover {
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

<a
  class="c0"
  href="/"
  linktype="logout"
>
  Login
</a>
`;
